# otus-task8

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  class_cmd_parser-members.html  class_cmd_parser.html  class_cmd_parser__coll__graph.map  class_cmd_parser__coll__graph.md5  class_comparer-members.html  class_comparer.html  class_comparer__coll__graph.map  class_comparer__coll__graph.md5  class_walker-members.html  class_walker.html  class_walker__coll__graph.map  class_walker__coll__graph.md5  classes.html  cmdparser_8cpp.html  cmdparser_8cpp__incl.map  cmdparser_8cpp__incl.md5  cmdparser_8h.html  cmdparser_8h__dep__incl.map  cmdparser_8h__dep__incl.md5  cmdparser_8h__incl.map  cmdparser_8h__incl.md5  cmdparser_8h_source.html  comparer_8cpp.html  comparer_8cpp__incl.map  comparer_8cpp__incl.md5  comparer_8h.html  comparer_8h__dep__incl.map  comparer_8h__dep__incl.md5  comparer_8h__incl.map  comparer_8h__incl.md5  comparer_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  functions.html  (+61 more)
.github/workflows/: release.yaml
scripts/: build-x64-win-vs-debug.bat  build-x86_64-linux.sh  cleanup.bat  colors_on.bat  doc.bat  locate_vs2022.bat
search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  (+2 more)
src/: CMakeLists.txt  cmdparser.cpp  cmdparser.h  comparer.cpp  comparer.h  hashes.cpp  hashes.h  main.cpp  settings.h  walker.cpp  walker.h
tests/: CMakeLists.txt  test_bayan.cpp
